# Second_demo

./: .dockerignore  .gitignore  DEPLOYMENT_GUIDE.md  DOCKER_README.md  DOCKER_SETUP.md  MANUAL_DEPLOY.md  PORT_CONFIGURATION.md  README.md  STRIPE_INTEGRATION_README.md  UNIFIED_PROFILE_GUIDE.md  check-ports.sh  deploy-aws.sh  docker-compose.prod.yml  docker-compose.yml  docker-start.sh  package-lock.json  package.json  pnpm-lock.yaml  start.sh  test-local.sh  verify-deployment.sh
ai-service/: .gitignore  API_DOCUMENTATION.md  DEV_TEAM_INTEGRATION_GUIDE.md  Dockerfile  Dockerfile.prod  PROJECT_STATUS_SUMMARY.md  README.md  api_server.py  api_server_hardcoded.py  api_server_ml.py  api_test_client.js  api_test_client.py  code.code-workspace  create_test_user.py  docker-entrypoint.sh  iOffer AI Agent Task and Timeline.md  manual_test.html  pyproject.toml  run_chat.py  run_langchain_rag_setup_docker.sh  run_rag_setup.sh  shared_memory.py  test_ml_predictions.py  test_ml_predictions_fixed.py  test_routing_keywords.py
ai-service/data/: embeddings.npy  faiss.index  qa_pairs.csv  rag_config.json  rag_config_langchain.json
ai-service/examples/: create_example_profile.py  session_usage_example.py
ai-service/scripts/: test_school_recommendation.py
ai-service/src/: __init__.py  settings.py
ai-service/test/: InfoExtractionAgentTest.py  test.py  test_api_comprehensive.py  test_basic_ws.py  test_cases.md  test_cases_817_Fenny.md  test_cases_xin.md  test_debug_final.py  test_exact_disconnect.py  test_long_wait.py  test_routing_agent.py  test_routing_debug.py  ws_test.html  (+5 more)
(+320 files in other folders)
